--- a/Scéance3/pom.xml
+++ b/Scéance3/pom.xml
@@ -35,7 +35,7 @@
   	 <artifactId>exec-maven-plugin</artifactId>
   	 <version>1.4.0</version>
   	 <configuration>
-    	  <mainClass>ensta.App</mainClass>
+    	  <mainClass>main.java.ensta.App</mainClass>
   	 </configuration>
         </plugin>
 
